saving server config and return ADS Exception in check function

--- a/templates/main.html
+++ b/templates/main.html
@@ -29,7 +29,7 @@
 {% endblock %}
 {% block content %}
     <h2>Remote Server Configuration</h2>
-    <form method="POST">
+    <form method="POST" action="/connection/save/">
         <table>
             <tr>
                 <td>Remote Server IP:</td>
