--- a/templates/main.html
+++ b/templates/main.html
@@ -49,7 +49,7 @@
     <input type="button" value="Check actual config" onclick="testfunction()"/>
 
     <h2>ADS Command Config</h2>
-    <form method="POST" action="/adscommands">
+    <form method="POST" action="/command/save/">
         <table>
             <tr>
                 <th>ID</th>
