--- a/templates/main.html
+++ b/templates/main.html
@@ -18,7 +18,7 @@
                 method: 'GET',
                 headers: {}
             };
-            fetch('/command/check/' + id)
+            fetch('/command/check/' + id + '/')
                 .then((resp) => resp.json())
                 .then(function (data) {
                     alert(data.data)
@@ -49,39 +49,49 @@
     <input type="button" value="Check actual config" onclick="testfunction()"/>
 
     <h2>ADS Command Config</h2>
-    <form method="POST" action="/adscommands">
+    <form method="POST" action="/command/save/">
         <table>
             <tr>
                 <th>ID</th>
                 <th>Command</th>
                 <th>Group</th>
+                <th title="Used for check if group=default">Default</th>
                 <th>Type</th>
                 <th></th>
             </tr>
-            {% for i in range(commands|length) %}
+            {% for i in range(data.commands|length) %}
                 <tr>
-                    <td><input name="{{ i }}-ID" value="{{ commands[i].id }}"/></td>
-                    <td><input name="{{ i }}-Command" value="{{ commands[i].command }}"/></td>
-                    <td><input name="{{ i }}-Group" value="{{ commands[i].group }}"/></td>
-                    <td><select name="{{ i }}-Type" value="{{ commands[i].type }}">
-                        <option value="PLCTYPE_BOOL">BOOL</option>
-                        <option value="PLCTYPE_BYTE">BYTE</option>
-                        <option value="PLCTYPE_INT" selected>INT</option>
-                        <option value="PLCTYPE_STRING">STRING</option>
+                    <td><input name="{{ i }}-ID" value="{{ data.commands[i].identifier }}"/></td>
+                    <td><input name="{{ i }}-Command" value="{{ data.commands[i].command }}"/></td>
+                    <td><input name="{{ i }}-Group" value="{{ data.commands[i].group }}"/></td>
+                    <td><input name="{{ i }}-Default" value="{{ data.commands[i].default }}"/></td>
+                    <td><select name="{{ i }}-Type" value="{{ data.commands[i].type }}">
+                        <option {{ "PLCTYPE_BOOL"|option(data.commands[i].type) }}>BOOL</option>
+                        <option {{ "PLCTYPE_BYTE"|option(data.commands[i].type) }}>BYTE</option>
+                        <option {{ "PLCTYPE_DWORD"|option(data.commands[i].type) }}>DWORD</option>
+                        <option {{ "PLCTYPE_INT"|option(data.commands[i].type) }}>INT</option>
+                        <option {{ "PLCTYPE_REAL"|option(data.commands[i].type) }}>REAL</option>
+                        <option {{ "PLCTYPE_STRING"|option(data.commands[i].type) }}>STRING</option>
+                        <option {{ "PLCTYPE_WORD"|option(data.commands[i].type) }}>WORD</option>
                     </select></td>
-                    <td><input type="button" value="Check command" onclick="checkcommand('{{ commands[i].id }}')"/></td>
+                    <td><input type="button" value="Check command"
+                               onclick="checkcommand('{{ data.commands[i].identifier }}')"/></td>
                 </tr>
             {% endfor %}
-            {% for i in range(commands|length, commands|length + 2) %}
+            {% for i in range(data.commands|length, data.commands|length + 2) %}
                 <tr>
                     <td><input name="{{ i }}-ID" value=""/></td>
                     <td><input name="{{ i }}-Command" value=""/></td>
+                    <td><input name="{{ i }}-Default" value=""/></td>
                     <td><input name="{{ i }}-Group" value=""/></td>
                     <td><select name="{{ i }}-Type" value="">
                         <option value="PLCTYPE_BOOL">BOOL</option>
                         <option value="PLCTYPE_BYTE ">BYTE</option>
-                        <option value="PLCTYPE_INT" selected>INT</option>
+                        <option value="PLCTYPE_DWORD" >DWORD</option>
+                        <option value="PLCTYPE_INT" >INT</option>
+                        <option value="PLCTYPE_REAL">REAL</option>
                         <option value="PLCTYPE_STRING">STRING</option>
+                        <option value="PLCTYPE_WORD" selected>WORD</option>
                     </select></td>
                 </tr>
             {% endfor %}
