--- a/templates/main.html
+++ b/templates/main.html
@@ -98,6 +98,61 @@
         </table>
         <button type="submit">Absenden</button>
     </form>
+
+
+    <h2>ADS Write Command Config</h2>
+    <form method="POST" action="/command/exec/save/">
+        <table>
+            <tr>
+                <th>ID</th>
+                <th>Command</th>
+                <th>Group</th>
+                <th title="Used for check if group=default">Default</th>
+                <th>Type</th>
+                <th title="Value for executing test">Default Value</th>
+                <th></th>
+            </tr>
+            {% for i in range(data.commands|length) %}
+                <tr>
+                    <td><input name="{{ i }}-ID" value="{{ data.commands[i].identifier }}"/></td>
+                    <td><input name="{{ i }}-Command" value="{{ data.commands[i].command }}"/></td>
+                    <td><input name="{{ i }}-Group" value="{{ data.commands[i].group }}"/></td>
+                    <td><input name="{{ i }}-Default" value="{{ data.commands[i].default }}"/></td>
+                    <td><select name="{{ i }}-Type" value="{{ data.commands[i].type }}">
+                        <option {{ "PLCTYPE_BOOL"|option(data.commands[i].type) }}>BOOL</option>
+                        <option {{ "PLCTYPE_BYTE"|option(data.commands[i].type) }}>BYTE</option>
+                        <option {{ "PLCTYPE_DWORD"|option(data.commands[i].type) }}>DWORD</option>
+                        <option {{ "PLCTYPE_INT"|option(data.commands[i].type) }}>INT</option>
+                        <option {{ "PLCTYPE_REAL"|option(data.commands[i].type) }}>REAL</option>
+                        <option {{ "PLCTYPE_STRING"|option(data.commands[i].type) }}>STRING</option>
+                        <option {{ "PLCTYPE_WORD"|option(data.commands[i].type) }}>WORD</option>
+                    </select></td>
+                    <td><input name="{{ i }}-DefaultValue" value="{{ data.commands[i].defaultValue }}"/></td>
+                    <td><input type="button" value="Check command"
+                               onclick="checkcommand('{{ data.commands[i].identifier }}')"/></td>
+                </tr>
+            {% endfor %}
+            {% for i in range(data.commands|length, data.commands|length + 2) %}
+                <tr>
+                    <td><input name="{{ i }}-ID" value=""/></td>
+                    <td><input name="{{ i }}-Command" value=""/></td>
+                    <td><input name="{{ i }}-Default" value=""/></td>
+                    <td><input name="{{ i }}-Group" value=""/></td>
+                    <td><select name="{{ i }}-Type" value="">
+                        <option value="PLCTYPE_BOOL">BOOL</option>
+                        <option value="PLCTYPE_BYTE ">BYTE</option>
+                        <option value="PLCTYPE_DWORD" >DWORD</option>
+                        <option value="PLCTYPE_INT" >INT</option>
+                        <option value="PLCTYPE_REAL">REAL</option>
+                        <option value="PLCTYPE_STRING">STRING</option>
+                        <option value="PLCTYPE_WORD" selected>WORD</option>
+                    </select></td>
+                </tr>
+            {% endfor %}
+        </table>
+        <button type="submit">Absenden</button>
+    </form>
+
 {% endblock %}
 </body>
 </html>
