Write commands added (#5)
* entry point for saving write commands

* save write commands in config

* rename test case

* simple check function

* extend form data

* added default value handling for check

* added send write interface

* renamed function

* fixed bug ads_write

--- a/templates/main.html
+++ b/templates/main.html
@@ -13,12 +13,24 @@
                 });
         }
 
-        function checkcommand(id) {
+        function checkCommand(id) {
             var opts = {
                 method: 'GET',
                 headers: {}
             };
             fetch('/command/check/' + id + '/')
+                .then((resp) => resp.json())
+                .then(function (data) {
+                    alert(data.data)
+                });
+        }
+
+        function checkExecCommand(id) {
+            var opts = {
+                method: 'GET',
+                headers: {}
+            };
+            fetch('/command/exec/check/' + id + '/')
                 .then((resp) => resp.json())
                 .then(function (data) {
                     alert(data.data)
@@ -75,7 +87,7 @@
                         <option {{ "PLCTYPE_WORD"|option(data.commands[i].type) }}>WORD</option>
                     </select></td>
                     <td><input type="button" value="Check command"
-                               onclick="checkcommand('{{ data.commands[i].identifier }}')"/></td>
+                               onclick="checkCommand('{{ data.commands[i].identifier }}')"/></td>
                 </tr>
             {% endfor %}
             {% for i in range(data.commands|length, data.commands|length + 2) %}
@@ -98,6 +110,62 @@
         </table>
         <button type="submit">Absenden</button>
     </form>
+
+
+    <h2>ADS Write Command Config</h2>
+    <form method="POST" action="/command/exec/save/">
+        <table>
+            <tr>
+                <th>ID</th>
+                <th>Command</th>
+                <th>Group</th>
+                <th title="Used for check if group=default">Default</th>
+                <th>Type</th>
+                <th title="Value for executing test">Default Value</th>
+                <th></th>
+            </tr>
+            {% for i in range(data.writecommands|length) %}
+                <tr>
+                    <td><input name="{{ i }}-ID" value="{{ data.writecommands[i].identifier }}"/></td>
+                    <td><input name="{{ i }}-Command" value="{{ data.writecommands[i].command }}"/></td>
+                    <td><input name="{{ i }}-Group" value="{{ data.writecommands[i].group }}"/></td>
+                    <td><input name="{{ i }}-Default" value="{{ data.writecommands[i].default }}"/></td>
+                    <td><select name="{{ i }}-Type" value="{{ data.writecommands[i].type }}">
+                        <option {{ "PLCTYPE_BOOL"|option(data.writecommands[i].type) }}>BOOL</option>
+                        <option {{ "PLCTYPE_BYTE"|option(data.writecommands[i].type) }}>BYTE</option>
+                        <option {{ "PLCTYPE_DWORD"|option(data.writecommands[i].type) }}>DWORD</option>
+                        <option {{ "PLCTYPE_INT"|option(data.writecommands[i].type) }}>INT</option>
+                        <option {{ "PLCTYPE_REAL"|option(data.writecommands[i].type) }}>REAL</option>
+                        <option {{ "PLCTYPE_STRING"|option(data.writecommands[i].type) }}>STRING</option>
+                        <option {{ "PLCTYPE_WORD"|option(data.writecommands[i].type) }}>WORD</option>
+                    </select></td>
+                    <td><input name="{{ i }}-DefaultValue" value="{{ data.writecommands[i].defaultValue }}"/></td>
+                    <td><input type="button" value="Check command"
+                               onclick="checkExecCommand('{{ data.writecommands[i].identifier }}')"/></td>
+                </tr>
+            {% endfor %}
+            {% for i in range(data.writecommands|length, data.writecommands|length + 2) %}
+                <tr>
+                    <td><input name="{{ i }}-ID" value=""/></td>
+                    <td><input name="{{ i }}-Command" value=""/></td>
+                    <td><input name="{{ i }}-Default" value=""/></td>
+                    <td><input name="{{ i }}-Group" value=""/></td>
+                    <td><select name="{{ i }}-Type" value="">
+                        <option value="PLCTYPE_BOOL">BOOL</option>
+                        <option value="PLCTYPE_BYTE ">BYTE</option>
+                        <option value="PLCTYPE_DWORD" >DWORD</option>
+                        <option value="PLCTYPE_INT" >INT</option>
+                        <option value="PLCTYPE_REAL">REAL</option>
+                        <option value="PLCTYPE_STRING">STRING</option>
+                        <option value="PLCTYPE_WORD" selected>WORD</option>
+                    </select></td>
+                    <td><input name="{{ i }}-DefaultValue" value=""/></td>
+                </tr>
+            {% endfor %}
+        </table>
+        <button type="submit">Absenden</button>
+    </form>
+
 {% endblock %}
 </body>
 </html>
